# KnowladgeAppRust

./: Cargo.toml
src/: main.rs
src/UI/: chat_application_ui.rs  mod.rs
src/lm_studio_client/: mod.rs
