[package]
name = "KnowladgeAppV2"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.12" }
iced_futures = { version = "0.12", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
reqwest = { version = "0.12.4", features = ["json", "blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.140"
qdrant-client = "1.9"
uuid = { version = "1.0", features = ["v4"] }
